# localstack-extension-ecs-container-endpoints

./: .gitignore  README.md  lets.yaml  pyproject.toml  setup.cfg
.github/workflows/: release.yaml
src/localstack_extension_ecs_container_endpoints/: __init__.py  extension.py
