[project]
name = "localstack-extension-ecs-container-endpoints"
version = "0.1.0"
description = "LocalStack Extension: localstack-extension-ecs-container-endpoints"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Mark S.", email = "the@wondersmith.io" }
]
keywords = ["localstack", "localstack-extension", "extension"]
classifiers = []
dependencies = []

[project.urls]
Homepage = "https://github.com/the-wondersmith/localstack-extension-ecs-container-endpoints"

[project.entry-points."localstack.extensions"]
localstack_ecs_container_endpoints = "localstack_ecs_container_endpoints.extension:EcsContainerEndpoints"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "plux>=1.3.1",
    "setuptools",
    "wheel",
]

[tool.rye]
managed = true
dev-dependencies = [
    "localstack>=4.1.0",
]
