[metadata]
name = localstack-extension-ecs-container-endpoints
description = LocalStack extension that logs when LocalStack is ready to receive requests
author = Mark S.
author_email = the@wondersmith.io
url = https://github.com/the-wondersmith/localstack-extension-ecs-container-endpoints

[options]
packages=find:
package_dir=
    =src
zip_safe = False
include_package_data = True
install_requires =
    localstack>=4.1.0

[options.packages.find]
where=src

[options.entry_points]
localstack.extensions =
    ecs_local_container_endpoints = localstack_ecs_container_endpoints.extension:EcsContainerEndpoints
